# bash-landing

./: .gitignore  README.md  audio_relay.py  bash_landing.sh  play-ssh.sh  pyproject.toml
config/: bash_landing.json
engine/: __init__.py  font.py  game.py  image_display.py  info_scene.py  input_handler.py  pixel_buffer.py  recorder.py  scene.py  title_menu.py
engine/audio/: __init__.py  sound_gen.py  sound_manager.py  wav_player.py
game/: controls_scene.py  hud.py  lander.py  main.py  physics.py  scene.py  sound_manager.py  terrain.py
input_backends/: pygame_input.py  shell_input.py
utils/: logger.py  paths.py
